[tool.poetry]
name = "cmr-umm-updater"
version = "0.7.1a0"
description = "Github action that publishes UMM-S and UMM-T updates to CMR"
authors = ["podaac-cloud-tva <podaac-cloud-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/cmr-umm-updater"
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.22"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]
sphinx = "^7.2.6"
httpretty = "^1.1.4"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
"umms_updater" = "podaac.umms_updater.umms_updater:run"
"ummt_updater" = "podaac.ummt_updater.ummt_updater:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
